# Seer-sdk

./: CMakeLists.txt  README.md
cmake/: SeerSdkConfig.cmake.in
seer/: embedplugin.h  ipc.h  ipchelper.h  seer_ipc.h  viewer_helper.h  viewerbase.h  viewerhelper.h  viewoption.h
